# SwiftQ

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: contracts.yml  frontend.yml  relayer.yml
apps/admin/: next.config.js  package.json
apps/admin/src/app/: layout.tsx  page.tsx
apps/admin/src/app/players/: page.tsx
apps/admin/src/app/questions/: page.tsx
apps/admin/src/app/rounds/: page.tsx
apps/web/: .env.example  next.config.js  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/leaderboard/: page.tsx
apps/web/src/app/play/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/results/[roundId]/: page.tsx
apps/web/src/components/: Navbar.tsx  Providers.tsx
docs/: VISION.md  architecture.md  relayer.md
docs/contracts/: leaderboard.md  quiz-pool.md
scripts/: deploy-contracts.sh  generate-bindings.sh  seed-testnet.sh
